--- a/ASE_Practical_Implementation (1)/config/policy.yaml
+++ b/ASE_Practical_Implementation (1)/config/policy.yaml
@@ -132,7 +132,15 @@ sandbox_policy:
     - "fdisk"
     - "sudo"
     - "su"
-    - "chmod 777"
+    - "chmod"
+    - "chown"
+    - "mv"
+    - "sh"
+    - "bash"
+    - "zsh"
+    - "curl"
+    - "wget"
+    - "nc"
   
   # Signing requirements
   require_signing: true
